--- a/webapp-next/styles/ProfilePicker.module.css
+++ b/webapp-next/styles/ProfilePicker.module.css
@@ -93,7 +93,6 @@
 .platformLogoExpanded {
     display: block;
     width: 12%;
-    margin-top: 5px;
     margin-right: 5px;
 }
 
@@ -114,13 +113,14 @@
 .containerMinimized {
     /* border: 1px solid black; */
     border-radius: 40px;
-    overflow: auto;
+    overflow-y: auto;
     height: 100%;
     margin-right: 5px;
     width: 100%;
     background-color: white;
     box-shadow: 5px 5px lightgray;
     margin-top: 10px;
+    overflow-x: hidden;
 }
 
 .expandMinimized {
@@ -140,4 +140,5 @@
     width: 2vw;
     border-radius: 50%;
     overflow: hidden;
+    display: flex;
 }
